examples/core/errors/syntax_errors/03_leading_colon.core.tao
// Parse Error: Colon without type annotation context
// Colon is only valid in type annotations (x : Type) or records ({x: value})
: $Type
